# fastapi-with-mongodb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/dependencies/: database.py  dependency_category.py  dependency_todo.py
app/api/errors/: http_error.py  validation_error.py
app/api/routes/: api.py  category_routes.py  todo_routes.py
app/core/: core_config.py  core_events.py  core_logging.py
app/db/: db_events.py
app/db/repositories/: base.py  category_repository.py  todo_repository.py
app/resources/: constants.py
app/schemas/: schema_db.py  schema_request.py
tests/: conftest.py
tests/schemas/: test_schema_db.py
