[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = "FastAPI template with MongoDB"
authors = ["Subhankar Biswas <subhankar@waterdip.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
pymongo = {version = "4.1.1", extras = ["srv"]}
mongoengine = "^0.24.1"
loguru = "^0.6.0"
requests = "^2.28.1"
PyHamcrest = "^2.0.3"

[tool.poetry.dev-dependencies]
essential-generators = "^1.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.3"
asgi-lifespan = "^1.0.1"
coverage = "^6.4.1"
coverage-badge = "1.1.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = ['.env.test']